--- a/translations/ru.json
+++ b/translations/ru.json
@@ -29,7 +29,7 @@
     "text_1": "LEDNEON.MD - компания по изготовлению неоновых вывесок ручной работы под заказ.",
     "text_2": "Производим, как внутренние, так и наружные вывески из светодиодной ленты высокого качества.",
     "text_3": "Размещаем изделие на листе оргстекла выбранного вами размера.",
-    "text_4": "Len неон — это новейшая технология, представляющая собой новое поколение обычного неонового освещения. В производстве мы используем современный гибкий неон. Его преимущества в том, что, в отличие от классического стеклянного, он потребляет меньше энергии, не содержит таких опасных веществ, как ртуть, не работает при высоком напряжении и устойчив к ударам и падениям.",
+    "text_4": "Led неон — это новейшая технология, представляющая собой новое поколение обычного неонового освещения. В производстве мы используем современный гибкий неон. Его преимущества в том, что, в отличие от классического стеклянного, он потребляет меньше энергии, не содержит таких опасных веществ, как ртуть, не работает при высоком напряжении и устойчив к ударам и падениям.",
     "servicesListFirst": {
       "itemFirst": "безопасность продукции",
       "itemSecond": "срок службы до 50 000 часов",
