--- a/translations/ro.json
+++ b/translations/ro.json
@@ -6,11 +6,11 @@
     "works": "Lucrarile noastre",
     "worksHref": "#our_works",
     "about": "despre noi",
-    "aboutHref": "#our_works",
-    "reviews": "opinii",
-    "reviewsHref": "#our_works",
+    "aboutHref": "#about",
+    "reviews": "recenzii",
+    "reviewsHref": "#reviews",
     "contacts": "contacte",
-    "contactsHref": "#our_works",
+    "contactsHref": "#contacts",
     "phone": "079380037",
     "phoneHref": "tel:+37379380037"
   },
