fixed contact component

--- a/translations/ro.json
+++ b/translations/ro.json
@@ -75,7 +75,7 @@
     "subtitleText_1": "Suntem bucuroși să răspundem la orice întrebări legate de produsele noastre.",
     "subtitleText_2": "Veți primi un răspuns în curând.",
     "formName": "Nume",
-    "formPhone": "(+373) Nemar de telefon",
+    "formPhone": "(+373) Numar de telefon",
     "formTextarea": "Mesaj",
     "formBtn": "Transmite"
   }
